--- a/api/存储与CDN/内容分发网络/刷新预热/预热记录查询.md
+++ b/api/存储与CDN/内容分发网络/刷新预热/预热记录查询.md
@@ -15,7 +15,7 @@ URL 预热接口目前仅开放内测，敬请期待全量开放。
 + 接口已支持子账号调用，权限配置可参考权限 [配置示例](https://cloud.tencent.com/document/product/228/14867)。
 
 
-更多信息，请参见 [示例代码](https://cloud.tencent.com/document/product/228/1734)。
+更多详情，请参见 [示例代码](https://cloud.tencent.com/document/product/228/1734)。
 
 ## 入参说明
 以下请求参数列表仅列出了接口请求参数，正式调用时需要加上公共请求参数，详情请参见 [公共请求参数](https://cloud.tencent.com/doc/api/231/4473) 页面。其中，此接口的 Action 字段为 GetPushLogs。
@@ -199,4 +199,3 @@ array (
     }
 }
 ```
-
